# google-contacts-to-icloud

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  merge_contacts.py  pyproject.toml
.github/workflows/: test.yml
tests/: test_merge.py
tests/fixtures/: account-a.csv  account-b.csv  account-other.csv  icloud-export.vcf
